--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/png" sizes="32x32" href="imgs/Icon.png">
+    <!-- todo Add icon -->
     <!-- todo Add meta tags -->
     <title>RepoTree</title>
 </head>
