--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <!-- todo Add icon -->
+    <link rel="icon" type="image/png" href="imgs/codeIcon.png">
     <!-- todo Add meta tags -->
     <title>RepoTree</title>
 </head>
@@ -21,17 +21,24 @@
             <span id="descricao">Entusiasta de programação e eletrônica</span>
         </header>
 
-        <div class="itemLinkedIn">
-            <span>LinkedIn</span>
-        </div>
+        <a href="https://www.linkedin.com/in/pedroo-nietoo/" target="_blank">
+            <div class="itemLinkedIn">
+                <span class="textoItem">LinkedIn</span>
+            </div>
+        </a>
 
+        <a href="https://github.com/Pedroo-Nietoo" target="_blank">
         <div class="itemGitHub">
             <span>GitHub</span>
         </div>
+        </a>
 
+        <a href="https://www.instagram.com/pedroo_nietoo/" target="_blank">
         <div class="itemInstagram">
             <span>Instagram</span>
         </div>
+        </a>
+
     </div>
     <script src="script.js"></script>
 </body>
