--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
         </a>
 
     </div>
-    <script src="script.js"></script>
+    <script src="js/aba.js"></script>
+    <script src="js/botoes.js"></script>
 </body>
 
 </html>
