--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/png" href="imgs/codeIcon.png">
+    <link rel="icon" type="image/png" href="imgs/icon.png">
     <meta name="author" content="Pedro Henrique Nieto da Silva">
     <meta name="keywords" content="Redes sociais, site, links">
     <meta name="description" content="Meu site para reunir os links das minhas redes sociais! Acesse já.">
