--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/png" href="imgs/icon.png">
-    <meta name="author" content="Pedro Henrique Nieto da Silva">
+    <meta name="author" content="@Pedroo-Nietoo">
     <meta name="keywords" content="Redes sociais, site, links">
     <meta name="description" content="Meu site para reunir os links das minhas redes sociais! Acesse já.">
     <meta name="application-name" content="RepoTree - Pedroo-Nietoo">
