--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
 
     <video id="video-bg" autoplay muted loop>
-        <source src="video/videoIntelbras.mp4">
+        <source src="Site/video/videoIntelbras.mp4">
     </video>
 
     <div id="container-repos">
