--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
     <div id="container-repos">
         <div class="repositorio">
+            <img class="svg" src="Site/svg/blob1.svg" alt="Blob">
             <h1 class="titulo">Versionamento</h1>
 
             <p class="descricao">Meu repositório de Versionamento, onde estudamos sobre <span
@@ -37,6 +38,7 @@
         </div>
 
         <div class="repositorio">
+            <img class="svg" src="Site/svg/blob2.svg" alt="Blob">
             <h1 class="titulo descricao">Lógica de Programação</h1>
 
             <p class="descricao">Meu repositório de Lógica de Programação, onde aprendemos os conceitos de lógica de
@@ -49,6 +51,7 @@
         </div>
 
         <div class="repositorio">
+            <img class="svg" src="Site/svg/blob3.svg" alt="Blob">
             <h1 class="titulo descricao">Metodologias Ágeis</h1>
 
             <p class="descricao">Meu repositório de Metodologias Ágeis, onde aprendemos sobre os métodos ágeis (Lean,
